--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,6 +1,6 @@
 <!-- filepath: app/views/contributions/index.html.erb -->
 <% content_for :title, "Mes Contributions - Omniscient Design" %>
-<% content_for :description, "Suivez vos contributions et voyez les œuvres que vous avez ajoutées, ainsi que leur statut de validation." %>
+<% content_for :description, "Suivez vos contributions et voyez les références que vous avez ajoutées, ainsi que leur statut de validation." %>
 <style>
   .status {
     padding: 5px 10px;
@@ -79,7 +79,7 @@
       </tbody>
     </table>
   <% else %>
-    <p>Vous n'avez ajouté aucune œuvre pour le moment.</p>
+    <p>Vous n'avez ajouté aucune référence pour le moment.</p>
   <% end %>
 </section>
 <<section class="grid-1">
