--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
   <h2 style="margin-top:32px" class="title">Références</h2>
   <div class="search-container">
-    <input type="search" id="oeuvre-search" placeholder="Rechercher des œuvres" />
+    <input type="search" id="oeuvre-search" placeholder="Rechercher des références" />
   </div>
   <div id="oeuvres-list" class="flex-card" style="margin-top:32px">
     <p>Chargement des références...</p>
