--- a/app/views/pages/add_elements.html.erb
+++ b/app/views/pages/add_elements.html.erb
@@ -34,7 +34,7 @@
 </style>
 <section class="grid-1 add-elements">
   <p class="subtitle-top">Votre contribution</p>
-  <h1 class="title-add-elements">Ajouter une référence</h1>
+  <h1 class="title-add-elements">Ajouter des designers ou des références</h1>
   <p class="subtitle">Partagez vos références sur Omniscient Design ! Soumettez vos découvertes et vos connaissances, et notre équipe les validera pour les intégrer à notre base de données. Bientôt, nous récompenserons les contributeurs les plus actifs pour leur précieuse aide !</p>
   <div class="add-flex">
     <%= link_to new_designer_path do %>
