--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -29,9 +29,9 @@
   </p>
   <h2>4 - Soumission de Contenu</h2>
   <p>
-    <span class="black medium">&nbsp;• Types de contenu :</span> Les Utilisateurs peuvent ajouter leurs propres œuvres et leurs propres références de designers sur le Site.<br>
+    <span class="black medium">&nbsp;• Types de contenu :</span> Les Utilisateurs peuvent ajouter leurs propres références et leurs propres références de designers sur le Site.<br>
     <span class="black medium">&nbsp;• Modération :</span> Tous les contenus soumis par les Utilisateurs sont soumis à un processus de modération. L'Éditeur se réserve le droit de supprimer tout contenu jugé inapproprié ou non conforme aux règles du Site.<br>
-    <span class="black medium">&nbsp;• Droits de propriété :</span> Les œuvres soumises par les Utilisateurs doivent être libres de droits et ne peuvent pas être protégées par des licences spécifiques telles que Creative Commons. Les Utilisateurs conservent la propriété des œuvres soumises mais les droits d'utilisation restent à la plateforme.
+    <span class="black medium">&nbsp;• Droits de propriété :</span> Les références soumises par les Utilisateurs doivent être libres de droits et ne peuvent pas être protégées par des licences spécifiques telles que Creative Commons. Les Utilisateurs conservent la propriété des références soumises mais les droits d'utilisation restent à la plateforme.
   </p>
   <h2>5 - Propriété Intellectuelle</h2>
   <p>
@@ -65,6 +65,6 @@
   </p>
   <h2>12 - Contact</h2>
   <p>
-    Pour toute question relative aux présentes CGU, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>
+    Pour toute question relative aux présentes CGU, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:contact@omniscientdesign.fr" class="black underline" target="_blank">contact@omniscientdesign.fr</a>
   </p>
 </section>
