--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -19,7 +19,7 @@
     • Amélioration du <span class="black medium">responsive du header</span>.<br>
     • Optimisation du <span class="black medium">responsive du parrainage</span>.<br>
     • Amélioration du <span class="black medium">responsive des notifications</span>.<br>
-    • Ajout de plusieurs <span class="black medium">designers dans une œuvre</span>.<br>
+    • Ajout de plusieurs <span class="black medium">designers dans une référence</span>.<br>
     • Chargement des <span class="black medium">références et designers</span> en mode 8x8 dans la page recherche.<br>
     • Augmentation du nombre de <span class="black medium">notifications disponibles</span>.</p>
   <h2>Mise à jour du 28 décembre 2024</h2>
