--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -22,7 +22,7 @@
     Notre site internet possède bien entendu un Certificat SSL (Secure Socket Layer).
   </p>
   <h2>4 - Droit d'Accès, de Modification et de Suppression</h2>
-  <p>Vous avez le droit d'accéder, de modifier ou de supprimer les informations personnelles que vous nous avez fournies. Pour cela, veuillez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>. Nous nous efforcerons de répondre à votre demande dans les plus brefs délais.</p>
+  <p>Vous avez le droit d'accéder, de modifier ou de supprimer les informations personnelles que vous nous avez fournies. Pour cela, veuillez nous contacter à l'adresse suivante : <a href="mailto:contact@omniscientdesign.fr" class="black underline" target="_blank">contact@omniscientdesign.fr</a>. Nous nous efforcerons de répondre à votre demande dans les plus brefs délais.</p>
   <h2>5 - Politique de l'hébergeur</h2>
   <p>Notre hébergeur possède sa propre politique de confidentialité concernant l'utilisation de vos données que vous pouvez consulter en tout temps <a href="https://www.hostinger.fr/politique-de-confidentialite" class="black underline">https://www.hostinger.fr/politique-de-confidentialite</a>.</p>
   <h2>6 - Consentement a notre politique</h2>
