--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -38,7 +38,7 @@
     <br>
     <span class="black medium">&nbsp;• Expérience : </span> analyser l’audience et améliorer l’expérience utilisateur sur notre site.<br>
     <span class="black medium">&nbsp;• Gestion des comptes utilisateurs :</span> création, maintenance, et gestion des comptes.<br>
-    <span class="black medium">&nbsp;• Modération des contenus :</span> vérification et validation des œuvres et références soumises par les utilisateurs.<br>
+    <span class="black medium">&nbsp;• Modération des contenus :</span> vérification et validation des références et des designers soumises par les utilisateurs.<br>
     <span class="black medium">&nbsp;• Communication :</span> envoi d'informations liées au compte et aux activités du Site (notifications, mises à jour, etc.).<br>
     <span class="black medium">&nbsp;• Sécurité :</span> prévenir et détecter toute activité frauduleuse<br>
   </p>
@@ -78,7 +78,7 @@
     <span class="black medium">&nbsp;• Droit à la portabilité :</span> Vous pouvez demander à recevoir vos données personnelles dans un format structuré et lisible par machine.<br>
     <span class="black medium">&nbsp;• Droit d'opposition :</span> Vous pouvez vous opposer au traitement de vos données pour des raisons tenant à votre situation particulière ou à des fins de marketing direct.
     Pour exercer vos droits, vous pouvez nous contacter à l'adresse suivante :
-    <a href="mailto:omniscientdesign.co@gmail.com" class="black" target="_blank">omniscientdesign.co@gmail.com</a>
+    <a href="mailto:contact@omniscientdesign.fr" class="black" target="_blank">contact@omniscientdesign.fr</a>
   </p>
   <h2>8 - Sécurité des données</h2>
   <p>
@@ -95,7 +95,7 @@
   <h2>11 - Contact</h2>
   <p>
     Si vous avez des questions ou des préoccupations concernant notre politique de confidentialité ou la manière dont nous traitons vos données personnelles, vous pouvez nous contacter à l'adresse suivante :
-    <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>
+    <a href="mailto:contact@omniscientdesign.fr" class="black underline" target="_blank">contact@omniscientdesign.fr</a>
     <br>
     <br>
     Le respect de vos droits est notre priorité<br>
