--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -72,8 +72,8 @@
   <p style="color:#FFF">Total <%= @oeuvres_count +@designers_count %> références</p>
 </section>
 <section class="grid-1">
-  <h2>Oeuvres en attente de validation</h2>
-  <p>Il y a actuellement <%= @oeuvres_count_val_false %> œuvres en attente de validation</p>
+  <h2>Références en attente de validation</h2>
+  <p>Il y a actuellement <%= @oeuvres_count_val_false %> références en attente de validation</p>
   <div class="table-wrapper">
     <table>
       <thead>
@@ -115,12 +115,12 @@
     </table>
   </div>
   <div id="load-more-button-oeuvres">
-    <button class="btn">Voir plus d'oeuvres</button>
+    <button class="btn">Voir plus de références</button>
   </div>
 </section>
 <section class="grid-1">
-  <h2>Oeuvres validées</h2>
-  <p>Il y a actuellement <%= @oeuvres_count %> œuvres validées</p>
+  <h2>Références validées</h2>
+  <p>Il y a actuellement <%= @oeuvres_count %> références validées</p>
   <div class="table-wrapper">
     <table>
       <thead>
@@ -169,7 +169,7 @@
     </table>
   </div>
   <div id="load-more-button-oeuvres-validated">
-    <button class="btn">Voir plus d'oeuvres validées</button>
+    <button class="btn">Voir plus de références validées</button>
   </div>
 </section>
 <section class="grid-1">
