--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -406,14 +406,8 @@
     }
   }
   .button-add {
-    background-color: $primary-color;
-    color: $secondary-color;
-    &:hover{
-      background-color: #3C3C3C;
-    }
-    &:active{
-      background-color: #1B1B1B;
-    }
+    background-color: $secondary-color;
+    color: $primary-color;
   }
   body.dark .button {
     color: $secondary-color;
