--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -48,10 +48,10 @@
   </p>
   <h2>5 -  Propriété Intellectuelle</h2>
   <p>
-    Tous les contenus présents sur le site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr</a>, y compris les textes, images, vidéos, créations graphiques, ainsi que les œuvres et références soumises par les utilisateurs, sont protégés par les lois relatives à la propriété intellectuelle. L'Éditeur est propriétaire des droits de propriété intellectuelle sur les éléments originaux du Site, à l'exception des contenus fournis par les utilisateurs.
+    Tous les contenus présents sur le site <a href="https://omniscientdesign.fr" class="black underline" target="_blank">https://omniscientdesign.fr</a>, y compris les textes, images, vidéos, créations graphiques, ainsi que les références et designers soumises par les utilisateurs, sont protégés par les lois relatives à la propriété intellectuelle. L'Éditeur est propriétaire des droits de propriété intellectuelle sur les éléments originaux du Site, à l'exception des contenus fournis par les utilisateurs.
     <br>
     <br>
-    Les utilisateurs peuvent soumettre leurs propres œuvres et références sur le Site, à condition que ces contenus soient libres de droits et ne violent pas les droits d'auteur ou autres droits de propriété intellectuelle de tiers. En soumettant des œuvres et références, les utilisateurs accordent à l'Éditeur une licence non exclusive, gratuite, et valable pour toute la durée de protection des droits d'auteur, permettant l'utilisation, la reproduction, l'affichage, la diffusion, et la modification de ces contenus dans le cadre du fonctionnement et de la promotion du Site.
+    Les utilisateurs peuvent soumettre leurs propres références et designers sur le Site, à condition que ces contenus soient libres de droits et ne violent pas les droits d'auteur ou autres droits de propriété intellectuelle de tiers. En soumettant des références et des designers, les utilisateurs accordent à l'Éditeur une licence non exclusive, gratuite, et valable pour toute la durée de protection des droits d'auteur, permettant l'utilisation, la reproduction, l'affichage, la diffusion, et la modification de ces contenus dans le cadre du fonctionnement et de la promotion du Site.
     <br>
     <br>
     Toute utilisation des contenus soumis par les utilisateurs au-delà des besoins de fonctionnement du Site nécessitera une autorisation écrite préalable de l'utilisateur concerné.
@@ -67,5 +67,5 @@
   <h2>8 - Modifications des mentions légales</h2>
   <p>Nous nous réservons le droit de modifier ces mentions légales à tout moment. Toute modification prendra effet dès sa publication sur ce site.</p>
   <h2>9 - Contact</h2>
-  <p>Pour toute question ou remarque concernant ces mentions légales, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:omniscientdesign.co@gmail.com" class="black underline" target="_blank">omniscientdesign.co@gmail.com</a>.</p>
+  <p>Pour toute question ou remarque concernant ces mentions légales, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:contact@omniscientdesign.fr" class="black underline" target="_blank">contact@omniscientdesign.fr</a>.</p>
 </section>
