--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -95,8 +95,8 @@
 </style>
 <section class="top-header">
   <%= link_to root_path do%>
-    <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M21 10.2168L1.57848 10.2168M1.57848 10.2168L8.86155 18.4336M1.57848 10.2168L8.86155 2" stroke="white" stroke-width="2" stroke-linecap="square"/>
+    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12.632 6.94488C12.632 6.94488 6.63067 12.9516 4.29333 15.2902C4.09733 15.4849 4 15.7409 4 15.9969C4 16.2529 4.09733 16.5089 4.29333 16.7035C6.62933 19.0422 12.6293 25.0462 12.6293 25.0462C12.8227 25.2395 13.0773 25.3355 13.332 25.3355C13.5867 25.3342 13.8427 25.2369 14.0387 25.0409C14.4293 24.6502 14.4307 24.0196 14.044 23.6316L7.40933 16.9969H26.9987C27.5507 16.9969 27.9987 16.5489 27.9987 15.9969C27.9987 15.4449 27.5507 14.9969 26.9987 14.9969H7.40933L14.0467 8.35822C14.432 7.97288 14.4293 7.34355 14.0387 6.95288C13.8427 6.75688 13.5867 6.65822 13.332 6.65822C13.0773 6.65688 12.8253 6.75288 12.632 6.94488Z" fill="white"/>
     </svg>
   <%end%>
   <p class="subtitle-top">Votre contribution</p>
@@ -129,35 +129,61 @@
           <div class="star-rating">
             <%= f.hidden_field question, value: 0 %>
             <label data-value="5">
-              <div>★</div>
+              <div><svg width="47" height="46" viewBox="0 0 47 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_3261_211)">
+                    <path d="M23.5 0L30.5303 15.6304L46.5 17.8365L34.8773 29.0068L37.714 46L23.5 37.2715L9.28408 46L12.1227 29.0068L0.5 17.8365L16.4697 15.6304L23.5 0Z" fill="white"/>
+                  </g>
+                </svg>
+              </div>
               <div class="flex-label">
                 <p class="label-number">5</p>
                 <p class="label-text">Très bonne</p>
               </div>
             </label>
             <label data-value="4">
-              <div>★</div>
+              <div><svg width="47" height="46" viewBox="0 0 47 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_3261_211)">
+                    <path d="M23.5 0L30.5303 15.6304L46.5 17.8365L34.8773 29.0068L37.714 46L23.5 37.2715L9.28408 46L12.1227 29.0068L0.5 17.8365L16.4697 15.6304L23.5 0Z" fill="white"/>
+                  </g>
+                </svg>
+              </div>
               <div class="flex-label">
                 <p class="label-number">4</p>
                 <p class="label-text">Bonne</p>
               </div>
             </label>
             <label data-value="3">
-              <div>★</div>
+              <div><svg width="47" height="46" viewBox="0 0 47 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_3261_211)">
+                    <path d="M23.5 0L30.5303 15.6304L46.5 17.8365L34.8773 29.0068L37.714 46L23.5 37.2715L9.28408 46L12.1227 29.0068L0.5 17.8365L16.4697 15.6304L23.5 0Z" fill="white"/>
+                  </g>
+                </svg>
+              </div>
               <div class="flex-label">
                 <p class="label-number">3</p>
                 <p class="label-text">Moyenne</p>
               </div>
             </label>
             <label data-value="2">
-              <div>★</div>
+              <div>
+                <svg width="47" height="46" viewBox="0 0 47 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_3261_211)">
+                    <path d="M23.5 0L30.5303 15.6304L46.5 17.8365L34.8773 29.0068L37.714 46L23.5 37.2715L9.28408 46L12.1227 29.0068L0.5 17.8365L16.4697 15.6304L23.5 0Z" fill="white"/>
+                  </g>
+                </svg>
+              </div>
               <div class="flex-label">
                 <p class="label-number">2</p>
                 <p class="label-text">Mauvaise</p>
               </div>
             </label>
             <label data-value="1">
-              <div>★</div>
+              <div><svg width="47" height="46" viewBox="0 0 47 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_3261_211)">
+                    <path d="M23.5 0L30.5303 15.6304L46.5 17.8365L34.8773 29.0068L37.714 46L23.5 37.2715L9.28408 46L12.1227 29.0068L0.5 17.8365L16.4697 15.6304L23.5 0Z" fill="white"/>
+                  </g>
+                </svg>
+              </div>
               <div class="flex-label">
                 <p class="label-number">1</p>
                 <p class="label-text">Très mauvaise</p>
