--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -3,6 +3,7 @@
 <%= javascript_include_tag "controllers/referenceShare", defer: true %>
 <%= javascript_include_tag "controllers/backBtn", defer: true %>
 <%= javascript_include_tag "controllers/validationOverlay", defer: true %>
+<%= javascript_include_tag "controllers/scroll_horizontal", defer: true %>
 <style>
   .popup .popup-content form{
     padding: 0px;
