--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -127,6 +127,8 @@
   });
 </script>
 <script>
+  import $ from "jquery";
+  import "select2";
   $(document).ready(function() {
     $('.select2').select2({
       placeholder: "Rechercher un pays...",
