--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -1,35 +1,47 @@
 @import 'abstracts/variables';
 #loading {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   z-index: 9999;
+  height: 100dvh;
+  width: calc(100vw - 350px);
+  
+}
+@media screen and (min-width:769px) and (max-width: 1280px) {
+  #loading {
+  width: 70vw;
+  }
+}
+@media screen and (min-width:501px) and (max-width: 768px) {
+  #loading {
+    width: 100vw;
+    height: calc(100dvh - 90px);
+  }
+}
+@media screen and (min-width:0px) and (max-width: 500px) {
+  #loading {
+    width: 100vw;
+    height: calc(100dvh - 80px);
+  }
+}
+.loader-bg{
+  padding: 24px;
+  background-color: $background-color;
+  border-radius: 50%;
 }
 
 #loading img {
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  aspect-ratio: 1/1;
 }
 
 #content {
   display: none;
 }
-@media screen and (max-width: 425px) {
+@media screen and (min-width: 0px) and (max-width: 1024px) {
   #loading img {
-    width: 50px;
-    height: 50px;
-  }
-}
-@media screen and (max-width: 600px) {
-  #loading img {
-    width: 150px;
-    height: 150px;
-  }
-}
-@media screen and (max-width: 1024px) {
-  #loading img {
-    width: 200px;
-    height: 200px;
+    width: 124px;
   }
 }
