--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -8,9 +8,12 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content:flex-start;
+  align-items: stretch;
+  column-gap: 1.5vw;
   row-gap: 24px;
   padding: 32px 0;
+  max-width: 1200px;
 }
 
 
@@ -229,6 +232,7 @@
 
   .flex-category,
   .flex-container {
+    column-gap: 16px;
     row-gap: 16px;
     padding: 24px 0;
   }
@@ -246,7 +250,7 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(24vw - 20px);
+    width: calc(24vw - 36px);
     height: 260px;
     padding: 15px;
   }
